--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 
 AUTOMAKE_OPTIONS = dist-bzip2 dist-zip
-SUBDIRS = src doc
+SUBDIRS = src
 EXTRA_DIST = README.* Release_Notes inet_ntop.c autogen.sh m4
