--- a/Makefile.in
+++ b/Makefile.in
@@ -236,7 +236,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = dist-bzip2 dist-zip
-SUBDIRS = src doc
+SUBDIRS = src
 EXTRA_DIST = README.* Release_Notes inet_ntop.c autogen.sh m4
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
