Makefile.lb: call the package provided autogen.sh to build configure
Otherwise we are missing stuff that's in src/missing, leading to build
breakage such as:

configure.ac:67: error: possibly undefined macro: AC_CHECK_SA_LEN
      If this token and others are legitimate, please use m4_pattern_allow.
      See the Autoconf documentation.

--- a/Makefile.lb
+++ b/Makefile.lb
@@ -5,7 +5,7 @@ all: configure build install checkin
 NETPERF_INSTALL_DIR ?= $(shell component-tool localpath --repo=netperf --type=$(BUILD_TYPE) netperf)
 
 configure:
-	$(Q) automake --add-missing
+	$(Q)./autogen.sh
 	$(Q)./configure --disable-omni
 
 build:
