LBM1-1947 Modified lb.yaml to new form
lb.yaml has a new structure and now contains the build instructions

--- a/lb.yaml
+++ b/lb.yaml
@@ -1,3 +1,8 @@
 netperf:
   netperf:
-  - file://.
+    build:
+      - make -f Makefile.lb
+    install:
+      - make -f Makefile.lb install
+    deps:
+      - file://.
